# Cargo.toml

[package]
name = "frd_pu"
version = "0.2.4"
edition = "2021"
description = " A high-performance, zero-dependency library for creating efficient and fast applications."
authors = ["3rror"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/3Rr0RHACK3R/frd-pu"
keywords = ["high-performance", "data-processing", "zero-dependency", "memory-efficient", "rust"]
categories = ["data-structures", "algorithms"]

# This library is intentionally zero-dependency.
[dependencies]
