[package]
name = "frd-pu"
version = "0.2.0"
edition = "2021"
authors = ["3Rr0RHACK3R"]
description = "FRD-PU: Ultra-fast modular Rust crate with C++/C static-engine backends (zero-copy streaming, high performance I/O)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/3Rr0RHACK3R/frd-pu"
readme = "README.md"
keywords = ["zerocopy", "io", "streaming", "engine", "performance"]
categories = ["network-programming", "filesystem", "os::windows", "os::linux"]

[lib]
name = "frd_pu"
crate-type = ["rlib", "staticlib"]

[features]
default = []

[build-dependencies]
# none — libraries are precompiled

[package.metadata.linker]
#

# For Linux/macOS
unix-libs = [
    { path = "src/engine/static/libzerocopy.a", kind = "static" }
]

# For Windows
windows-libs = [
    { path = "src/engine/static/zerocopy.lib", kind = "static" }
]

[package.metadata.docs]
include = ["src/engine/zerocopy.rs", "src/lib.rs"]

[package.metadata.engine]
name = "ZeroCopy Streaming Engine"
language = "C"
architecture = ["x86", "x86_64"]
platforms = ["windows", "linux"]
